# goop

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: audit.yml  pages.yml  release.yml
crates/goop-config/: Cargo.toml
crates/goop-config/src/: lib.rs  presets.rs  settings.rs
crates/goop-converter/: Cargo.toml
crates/goop-converter/src/: backend.rs  compat.rs  encoders.rs  ffmpeg.rs  imagemagick.rs  imagemagick_probe.rs  lib.rs  naming.rs  probe_json.rs  progress.rs
crates/goop-core/: Cargo.toml
crates/goop-core/src/: convert.rs  error.rs  events.rs  history.rs  job.rs  lib.rs  path.rs  pdf.rs  preset.rs  process_registry.rs  update.rs
crates/goop-extractor/: Cargo.toml
crates/goop-extractor/src/: backend.rs  classify.rs  error_map.rs  gallery_dl.rs  lib.rs  ytdlp.rs
crates/goop-pdf/: Cargo.toml
crates/goop-pdf/src/: compress.rs  lib.rs  merge.rs  probe.rs  range_parser.rs  split.rs
crates/goop-queue/: Cargo.toml
crates/goop-queue/migrations/: 0001_init.sql
crates/goop-queue/src/: lib.rs  process_control.rs  scheduler.rs  store.rs
crates/goop-sidecar/: Cargo.toml
crates/goop-sidecar/src/: binaries.rs  lib.rs  updater.rs
crates/goop-sidecar/tests/: binaries_integration.rs
docs/: roadmap-v0.1.6-to-v0.2.0.md
docs_templates/: design-audit.md  feature-brief.md
scripts/: build-gallery-dl-macos.sh  fetch-sidecars.sh  generate-bindings.sh  pre-push.sh  pre-push.test.sh  rasterize-icon.sh
shared/types/: CompressMode.ts  ConvertRequest.ts  ConvertResult.ts  ExtractRequest.ts  ExtractResult.ts  ExtractorChoice.ts  FormatOption.ts  GifOptions.ts  GifSizePreset.ts  HistoryCounts.ts  HistoryFilter.ts  HistorySort.ts  HistoryViewMode.ts  IpcError.ts  Job.ts  JobId.ts  JobKind.ts  JobResult.ts  JobState.ts  PageRange.ts  PdfOperation.ts  PdfProbeResult.ts  PdfQuality.ts  Preset.ts  ProbeResult.ts  ProgressEvent.ts  QualityPreset.ts  QueueEvent.ts  ResolutionCap.ts  ResultKind.ts  Settings.ts  SettingsPatch.ts  SidecarEvent.ts  SidecarStatus.ts  Source.ts  SourceKind.ts  TargetFormat.ts  Theme.ts  UpdateInfo.ts  UpdateProgress.ts  (+3 more)
site/: app.js  index.html  styles.css
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_update.rs  events.rs  lib.rs  main.rs  state.rs  thumbnail.rs
src-tauri/src/commands/: convert.rs  extract.rs  file.rs  history.rs  mod.rs  pdf.rs  preset.rs  queue.rs  settings.rs  sidecar.rs  thumbnail.rs  update.rs
src/components/: BrandMark.tsx  CommandPalette.tsx  DropOverlay.test.tsx  DropOverlay.tsx  ErrorBoundary.tsx  JobStateAnnouncer.tsx  Layout.tsx  LeftNav.tsx  Onboarding.tsx  SettingsSection.tsx  SkipNav.tsx  Toast.tsx  ToastContainer.tsx  TopBar.tsx  UpdateBanner.tsx
src/components/__tests__/: CommandPalette.test.tsx  JobStateAnnouncer.test.tsx  Onboarding.test.tsx  SkipNav.test.tsx  Toast.test.tsx
src/features/compress/: CompressActionBar.tsx  CompressBlob.tsx  CompressControls.tsx  CompressFileRow.tsx  sizeMath.ts
src/features/convert/: CompressionPresets.tsx  ConvertActionBar.tsx  DropTypeOverlay.tsx  DropZone.tsx  FileRow.tsx  GifOptionsPanel.tsx  MediaBlob.tsx  TargetPicker.tsx
src/features/convert/__tests__/: ConvertPage.test.tsx  DropZone.test.tsx
src/features/extract/: ProbeCard.tsx  UrlHero.tsx
src/features/history/: EmptyHistory.tsx  HistoryBulkActions.tsx  HistoryFilterChips.tsx  HistoryGrid.tsx  HistoryList.tsx  HistoryToolbar.tsx
src/features/history/__tests__/: EmptyHistory.test.tsx  history.test.tsx
src/features/pdf/: PdfCompressPicker.tsx  PdfFlow.tsx  PdfMergeList.tsx  PdfOperationPicker.tsx  PdfSplitEditor.tsx
src/features/pdf/__tests__/: PdfSplitEditor.test.ts
src/features/presets/: PresetChips.tsx  PresetManager.tsx  PresetSaveDialog.tsx  io.ts
src/features/presets/__tests__/: io.test.ts  presets.test.tsx
src/features/preview/: DeleteMenu.tsx  PreviewContent.tsx  PreviewPanel.tsx  QuickViewModal.tsx  useQuickView.ts
src/features/preview/__tests__/: PreviewContent.test.tsx
src/features/queue/: QueueRow.tsx  QueueSidebar.tsx  SortableQueueRow.tsx
src/features/queue/__tests__/: QueueRow.test.tsx
src/hooks/: useAppVersion.ts  useDropTarget.ts  useHotkeys.ts  useProbe.ts  useQueueHotkey.ts  useSpringValue.ts  useTheme.ts  useThumbnail.ts  useToastTriggers.ts
src/hooks/__tests__/: useHotkeys.test.tsx  useSpringValue.test.tsx
src/ipc/: commands.ts  error.test.ts  error.ts  events.ts
src/lib/: platform.ts  viewTransition.ts
src/pages/: CompressPage.tsx  ConvertPage.tsx  ExtractPage.tsx  HistoryPage.tsx  SettingsPage.tsx
src/pages/__tests__/: SettingsPage.test.tsx
src/store/: appStore.ts
src/store/__tests__/: appStore.test.ts  thumbnails.test.ts
src/styles/: index.css  tokens.css
src/test/: setup.ts
src/types/: index.ts  tinykeys.d.ts
