[workspace]
resolver = "2"
members = [
    "crates/goop-core",
    "crates/goop-sidecar",
    "crates/goop-extractor",
    "crates/goop-queue",
    "crates/goop-config",
    "src-tauri",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/thrtn70/goop"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1.10", features = ["v7", "serde"] }
ts-rs = "10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
