[package]
name = "goop-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
goop-core = { path = "../crates/goop-core", features = ["test-util"] }
goop-sidecar = { path = "../crates/goop-sidecar" }
goop-extractor = { path = "../crates/goop-extractor" }
goop-queue = { path = "../crates/goop-queue" }
goop-config = { path = "../crates/goop-config" }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tokio.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ts-rs.workspace = true
parking_lot = "0.12"
