[package]
name = "goop-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
goop-core = { path = "../goop-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
ts-rs.workspace = true
num_cpus = "1"

[dev-dependencies]
tempfile = "3"
