[package]
name = "goop-converter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
goop-core = { path = "../goop-core" }
goop-sidecar = { path = "../goop-sidecar" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"] }
