[package]
name = "goop-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs = "5.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
ts-rs = { workspace = true, features = ["uuid-impl", "serde-json-impl"] }

[features]
test-util = []
