[package]
name = "goop-extractor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
goop-core = { path = "../goop-core" }
goop-sidecar = { path = "../goop-sidecar" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
ts-rs.workspace = true
regex = "1.10"
tracing.workspace = true
url = "2.5"
