[package]
name = "goop-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
goop-core = { path = "../goop-core" }
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ts-rs.workspace = true
which = "6"
